--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -377,6 +377,12 @@ config MACH_ACMENETUSFOXG20
 	  Select this if you are using Acme Systems
 	  FOX Board G20 <http://www.acmesystems.it>
 
+config MACH_NANOS
+	bool "taskit NanosG20"
+	help
+	  Select this if you are using Ledato's NanosG20.
+	  <http://www.ledato.de/en/>
+
 config MACH_PORTUXG20
 	bool "taskit PortuxG20"
 	help
